--- a/public/p/azure-resource-group-enterprise-scale-landing-zone-queries/index.html
+++ b/public/p/azure-resource-group-enterprise-scale-landing-zone-queries/index.html
@@ -464,8 +464,12 @@
 
     <section class="article-content">
     <h1 id="azure-resource-graph-examples">Azure Resource Graph Examples</h1>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
+<!-- ![Azure Resource Graph](resourcegraph-scaled.png) -->
+<!-- <figure><img src="resourcegraph-scaled.png"/><figcaption>
+            <h4>Azure Resource Graph</h4>
+        </figcaption>
+</figure>
+ -->
 <p>This is just a quick post. I am slowly working on building a collection of Resource Graph Queries - they can be found <a class="link" href="https://github.com/fskelly/azure-resource-graph/tree/main/enterpriseScale"  target="_blank" rel="noopener"
     >here</a> and will grow over time. It just takes some time to build these.</p>
 <p>They will be broken down into a folder structure based upon the <a class="link" href="https://docs.microsoft.com/en-us/azure/cloud-adoption-framework/ready/enterprise-scale/design-guidelines"  target="_blank" rel="noopener"
