new blog - azure rest api

--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,9 @@ Constraints / limitations The primary focus of this script is IaaS.</p></div>
                 <div class="meta">
                     <div class="info"><em class="fas fa-calendar-day"></em><span
                                 class="date">Thu, Aug 3, 2023</span>
-                        
+                        <a class="tag"
+                                   href="/tags/azure/">Azure</a><a class="tag"
+                                   href="/tags/cost-management/">Cost Management</a>
                     </div>
                 </div>
             </div>
